# Evaluation-Paper-3

backend/: .env  README.md  main.py  pyproject.toml  rag.py  requirements.txt
frontend/src/: App.tsx
